Fix wrong font size

--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ p {
 }
 
 li {
-    font-size: 2.4vw;
+    font-size: 2.2vw;
     font-family: Calibri, sans-serif;
 }
 
